# TeppoRisk

./: .gitignore  .vercelignore  AGENTS.md  Makefile  README.md  vercel.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  station_metadata_v2.xlsx
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  predict.py  stations.py
backend/app/core/: config.py
backend/app/schemas/: predict.py  stations.py
backend/app/services/: model_service.py  open_meteo.py  overview_service.py  probability_mapping.py  rainfall_service.py  raining_service.py  time_utils.py
backend/model_assets/: best_model.pth
backend/tests/: test_config.py  test_health.py  test_overview.py  test_predict.py  test_stations.py
frontend/: .env.example  .gitignore  Makefile  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ProbabilityChart.tsx  RainfallMap.tsx
frontend/app/components/rainfall-map/: MapMessageOverlay.tsx  RiskToolbar.tsx  StationDetailCard.tsx  config.ts
frontend/app/hooks/: useStationProbability.ts  useStationRiskOverview.ts
frontend/app/lib/: geo.ts
frontend/app/types/: predict.ts  risk.ts
