[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "real-time-risk-backend"
version = "0.1.0"
description = "FastAPI backend for the real-time-risk project"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.8,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
  "httpx>=0.28,<1.0",
  "torch>=2.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "joblib>=1.3",
  "openpyxl>=3.1",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "mypy>=1.15,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app", "tests"]

[[tool.mypy.overrides]]
module = ["joblib", "pandas"]
ignore_missing_imports = true
